--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -1,7 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <!-- Theme applied to the Android Window while the process is starting when the OS's Dark Mode setting is off -->
-    <style name="LaunchTheme" parent="@android:style/Theme.Light.NoTitleBar">
+<!--    <style name="LaunchTheme" parent="@android:style/Theme.Light.NoTitleBar">-->
+<!--        &lt;!&ndash; Show a splash screen on the activity. Automatically removed when-->
+<!--             the Flutter engine draws its first frame &ndash;&gt;-->
+<!--        <item name="android:windowBackground">@drawable/launch_background</item>-->
+<!--    </style>-->
+
+    <style name="LaunchTheme" parent="Theme.AppCompat.Light">
         <!-- Show a splash screen on the activity. Automatically removed when
              the Flutter engine draws its first frame -->
         <item name="android:windowBackground">@drawable/launch_background</item>
@@ -12,7 +18,17 @@
          running.
 
          This Theme is only used starting with V2 of Flutter's Android embedding. -->
-    <style name="NormalTheme" parent="@android:style/Theme.Light.NoTitleBar">
+<!--    <style name="NormalTheme" parent="@android:style/Theme.Light.NoTitleBar">-->
+<!--        <item name="android:windowBackground">?android:colorBackground</item>-->
+<!--    </style>-->
+
+    <style name="NormalTheme" parent="Theme.AppCompat.Light">
         <item name="android:windowBackground">?android:colorBackground</item>
+    </style>
+
+    <style name="PaymentColorTheme" parent="Theme.AppCompat.Light">
+        <item name="colorControlNormal">@color/gray_cccccc</item>
+        <item name="colorControlActivated">@color/black_3f3a3a</item>
+        <item name="android:colorControlHighlight">@color/black_3f3a3a</item>
     </style>
 </resources>
